service.yml
apiVersion: v1
kind: Service
metadata:
  name: html-demo-svc
  namespace: test-demo
spec:
  selector:
    app: html-demo
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
