ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: html-demo-ingress
  namespace: test-demo

spec:
  ingressClassName: nginx

  rules:
    - host: vsmart-care.m-society.go.th
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: html-demo-svc
                port:
                  number: 80
